@@ -26,4 +26,24 @@ class ConfigurationTest < ActiveSupport::TestCase
     assert_equal "myshopify.io", ShopifyApp.configuration.myshopify_domain
   end
 
+  test "can configure webhooks for creation" do
+    webhook = {topic: 'carts/update', address: 'example-app.com/webhooks', format: 'json'}
+
+    ShopifyApp.configure do |config|
+      config.webhooks = [webhook]
+    end
+
+    assert_equal webhook, ShopifyApp.configuration.webhooks.first
+  end
+
+  test "has_webhooks? is true if webhooks have been configured" do
+    refute ShopifyApp.configuration.has_webhooks?
+
+    ShopifyApp.configure do |config|
+      config.webhooks = [{topic: 'carts/update', address: 'example-app.com/webhooks', format: 'json'}]
+    end
+
+    assert ShopifyApp.configuration.has_webhooks?
+  end
+
 end
